--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "node": ">=10"
   },
   "scripts": {
-    "release": "standard-version && git push --follow-tags"
+    "release": "standard-version"
   },
   "files": [
     "tsconfig.json"
